Build out update request schema
