# core/src/main/scala/org/broadinstitute/dsde/workbench/leonardo/http/adminRoutesModels.scala
@@ -1,4 +1,18 @@
 package org.broadinstitute.dsde.workbench.leonardo.http
 
-// TODO
-final case class UpdateAppsRequest(dryRun: Boolean)
+import org.broadinstitute.dsde.workbench.leonardo._
+import org.broadinstitute.dsde.workbench.model.google.GoogleProject
+import org.broadinstitute.dsp.ChartVersion
+
+
+final case class UpdateAppsRequest(appType: AppType,
+                                   cloudProvider: CloudProvider,
+                                   appVersionsInclude: List[ChartVersion],
+                                   appVersionsExclude: List[ChartVersion],
+                                   googleProject: Option[GoogleProject],
+                                   workspaceId: Option[WorkspaceId],
+                                   appNames: List[AppName],
+                                   dryRun: Boolean
+)
+
+
